removed useless dependency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "underscore": "^1.6.0",
     "express": "^4.1.1",
     "yargs": "^1.2.1",
-    "glob": "^3.2.9",
-    "moment": "^2.6.0"
+    "glob": "^3.2.9"
   }
 }
